--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/cms
+spring.datasource.url =jdbc:mysql://root:NlkBFIOxZhPPMYoTXPinWzbRSpuITeZN@junction.proxy.rlwy.net:10265/railway
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Hima@1025
+spring.datasource.password=NlkBFIOxZhPPMYoTXPinWzbRSpuITeZN
 spring.jpa.show-sql:true
 spring.jpa.hibernate.ddl-auto=update
